--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ body {
     font-family: "Open Sans", sans-serif;
     color: #444444;
   }
-  
+
   a {
     color: #2c2c2c;
     text-decoration: none;
@@ -466,28 +466,7 @@ body {
     margin-bottom: 0;
   }
   
-  /*--------------------------------------------------------------
-  # Clients
-  --------------------------------------------------------------*/
-  .clients {
-    background: #f6f6f7;
-    text-align: center;
-    padding: 5px 0;
-  }
-  
-  .clients img {
-    width: 40%;
-    filter: grayscale(100);
-    transition: all 0.4s ease-in-out;
-    display: inline-block;
-    padding: 15px 0;
-  }
-  
-  .clients img:hover {
-    filter: none;
-    transform: scale(1.1);
-  }
-  
+ 
   /*--------------------------------------------------------------
   # About
   --------------------------------------------------------------*/
@@ -550,6 +529,34 @@ body {
     font-weight: 500;
   }
   
+
+/* ANIMATION CONTAINER */
+
+.animation .icon-boxes .icon-box {
+  text-align: center;
+  border-radius: 40px;
+  background: #fff;
+  box-shadow: 0px 1px 16px rgba(31, 31, 31, 0.3);
+  padding: 20px 40px;
+  width: 100%;
+  transition: 0.3s;
+}
+
+.animation .icon-boxes .icon-box p {
+  font-size: 15px;
+  color: #848484;
+}
+
+.animation .icon-boxes .icon-box:hover {
+  box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.15);
+}
+
+/* END ANIMATION CONTAINER*/
+
+
+
+
+
   /*--------------------------------------------------------------
   # Why Us
   --------------------------------------------------------------*/
