--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -850,6 +850,8 @@ body {
     background-color: #cf7610;
   }
   
+  /*INFORMAÇÕES DO RESPONSÁVEL*/
+  /*INFORMAÇÕES DO RESPONSÁVEL*/
   .portfolio-details .portfolio-info {
     padding: 30px;
     box-shadow: 0px 0 30px rgba(54, 52, 58, 0.08);
