--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -528,8 +528,11 @@ body {
     font-size: 15px;
     font-weight: 500;
   }
-  
+    
+  .video {
 
+
+}
 
 
   /*--------------------------------------------------------------
