--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -529,10 +529,24 @@ body {
     font-weight: 500;
   }
     
-  .video {
 
+/*--------------------------------------------------------------
+  # VÍDEO
+  --------------------------------------------------------------*/
 
+  #corpo video{
+    width: 750px;
+    margin:0 auto;
+    display: block;
+    text-align: center;
+    border-radius: 10px;
+    background: #fff;
+    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+    padding: 30px 80px;
+    width: 100%;
+    transition: 0.3s;
 }
+
 
 
   /*--------------------------------------------------------------
