--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -533,19 +533,28 @@ body {
 /*--------------------------------------------------------------
   # VÍDEO
   --------------------------------------------------------------*/
-
-  #corpo video{
-    width: 750px;
+/* #corpo video {
+    width: 5px;
     margin:0 auto;
     display: block;
     text-align: center;
     border-radius: 10px;
     background: #fff;
-    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
-    padding: 30px 80px;
+    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.2);
+    padding: 15px 15px;
     width: 100%;
     transition: 0.3s;
 }
+*/
+
+figure { width: 35%; min-width: 320px; margin:0 auto;}
+figcaption { font: 35% sans-serif; text-align: center;}
+video {
+    width: 100%;
+    height: auto;
+}
+
+
 
 
 
