--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -531,22 +531,24 @@ body {
     
 
 /*--------------------------------------------------------------
-  # VÍDEO
+  # POP UP
   --------------------------------------------------------------*/
-/* #corpo video {
-    width: 5px;
-    margin:0 auto;
-    display: block;
-    text-align: center;
-    border-radius: 10px;
-    background: #fff;
-    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.2);
-    padding: 15px 15px;
-    width: 100%;
-    transition: 0.3s;
+  .modal-content {
+    position: relative;
+    background-color: #fff;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+    border: 1px solid #999;
+    border: 1px solid rgba(0,0,0,.2);
+    border-radius: 6px;
+    outline: 0;
+    -webkit-box-shadow: 0 3px 9px rgb(0 0 0 / 50%);
+    box-shadow: 0 3px 9px rgb(0 0 0 / 50%);
 }
-*/
+/* END POP UP */
 
+
+/* VÍDEO */ 
 figure { width: 45%; min-width: 320px; margin:0 auto;}
 video {
     width: 100%;
@@ -562,8 +564,12 @@ video {
     width: 100%;
     transition: 0.3s;
 }
+/* END VÍDEO */
 
 
+/* BOTÃO DE ORÇAMENTO */
+
+/* END BOTÃO ORÇAMENTO */
 
 
 
