--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,7 +172,7 @@ body {
   }
   
   .navbar .getstarted {
-    background: #009970;
+    background: #188f6f;
     padding: 10px 25px;
     margin-left: 30px;
     margin-right: 15px;
@@ -403,7 +403,7 @@ body {
   }
   
   #hero .btn-get-started:hover {
-    background: #009970;
+    background: #692525;
     border: 2px solid #009970;
   }
   
@@ -533,18 +533,6 @@ body {
 /*--------------------------------------------------------------
   # POP UP
   --------------------------------------------------------------*/
-  .modal-content {
-    position: relative;
-    background-color: #fff;
-    -webkit-background-clip: padding-box;
-    background-clip: padding-box;
-    border: 1px solid #999;
-    border: 1px solid rgba(0,0,0,.2);
-    border-radius: 6px;
-    outline: 0;
-    -webkit-box-shadow: 0 3px 9px rgb(0 0 0 / 50%);
-    box-shadow: 0 3px 9px rgb(0 0 0 / 50%);
-}
 /* END POP UP */
 
 
@@ -568,7 +556,7 @@ video {
 
 
 /* BOTÃO DE ORÇAMENTO */
-
+.
 /* END BOTÃO ORÇAMENTO */
 
 
@@ -1434,8 +1422,21 @@ video {
     transition: 0.3s;
 }
 
+
+
 #footer .social-links a:hover {
     background: #161616;
     color: #fff;
     text-decoration: none;
 }
+
+
+
+.btn .btn-get-started {
+  text-decoration: #fcfcfc;
+  color: #fff;
+  text-decoration: none;
+  
+}
+
+
