--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -903,172 +903,7 @@ video {
     padding: 0;
   }
   
-  /*--------------------------------------------------------------
-  # Testimonials
-  --------------------------------------------------------------*/
-  .testimonials .testimonial-item {
-    box-sizing: content-box;
-    padding: 30px 30px 0 30px;
-    margin: 30px 15px;
-    text-align: center;
-    min-height: 350px;
-    box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.08);
-    background: #fff;
-  }
-  
-  .testimonials .testimonial-item .testimonial-img {
-    width: 90px;
-    border-radius: 50%;
-    border: 4px solid #fff;
-    margin: 0 auto;
-  }
-  
-  .testimonials .testimonial-item h3 {
-    font-size: 18px;
-    font-weight: bold;
-    margin: 10px 0 5px 0;
-    color: #111;
-  }
-  
-  .testimonials .testimonial-item h4 {
-    font-size: 14px;
-    color: rgb(138, 138, 138);
-    margin: 0;
-  }
-  
-  .testimonials .testimonial-item .quote-icon-left, .testimonials .testimonial-item .quote-icon-right {
-    color: #00cc95;
-    font-size: 26px;
-  }
-  
-  .testimonials .testimonial-item .quote-icon-left {
-    display: inline-block;
-    left: -5px;
-    position: relative;
-  }
-  
-  .testimonials .testimonial-item .quote-icon-right {
-    display: inline-block;
-    right: -5px;
-    position: relative;
-    top: 10px;
-  }
-  
-  .testimonials .testimonial-item p {
-    font-style: italic;
-    margin: 0 auto 15px auto;
-  }
-  
-  .testimonials .swiper-pagination {
-    margin-top: 20px;
-    position: relative;
-  }
-  
-  .testimonials .swiper-pagination .swiper-pagination-bullet {
-    width: 12px;
-    height: 12px;
-    background-color: #fff;
-    opacity: 1;
-    border: 1px solid #009970;
-  }
-  
-  .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-    background-color: #009970;
-  }
-  
-  /*--------------------------------------------------------------
-  # Team
-  --------------------------------------------------------------*/
-  .team {
-    background: #fff;
-  }
-  
-  .team .member {
-    position: relative;
-    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
-    padding: 30px;
-    border-radius: 10px;
-    text-align: center;
-  }
-  
-  .team .member .pic {
-    overflow: hidden;
-    width: 150px;
-    border-radius: 50%;
-    margin: 0 auto 20px auto;
-  }
-  
-  .team .member .pic img {
-    transition: ease-in-out 0.3s;
-  }
-  
-  .team .member:hover img {
-    transform: scale(1.1);
-  }
-  
-  .team .member h4 {
-    font-weight: 700;
-    margin-bottom: 5px;
-    font-size: 20px;
-    color: #36343a;
-  }
-  
-  .team .member span {
-    display: block;
-    font-size: 15px;
-    padding-bottom: 10px;
-    position: relative;
-    font-weight: 500;
-  }
-  
-  .team .member span::after {
-    content: '';
-    position: absolute;
-    display: block;
-    width: 50px;
-    height: 1px;
-    background: #b5b3ba;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-  }
-  
-  .team .member p {
-    margin: 10px 0 0 0;
-    font-size: 14px;
-  }
-  
-  .team .member .social {
-    margin-top: 12px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .team .member .social a {
-    transition: ease-in-out 0.3s;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50px;
-    width: 32px;
-    height: 32px;
-    background: #a8a5ae;
-  }
-  
-  .team .member .social a i {
-    color: #fff;
-    font-size: 16px;
-    margin: 0 2px;
-  }
-  
-  .team .member .social a:hover {
-    background: #009970;
-  }
-  
-  .team .member .social a + a {
-    margin-left: 8px;
-  }
+ 
   
   /*--------------------------------------------------------------
   # Contact
@@ -1263,7 +1098,7 @@ video {
 #footer {
     color: #bebebe;
     font-size: 14px;
-    background: #2c2c2c;
+    background: #dddddd;
 }
 
 #footer .footer-top {
