--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -335,7 +335,7 @@ body {
   #hero {
     width: 100%;
     height: 80vh;
-    background: url("../img/caalga/caalga\ solucoes\ industriais\ -\ cilindro\ de\ pinças.png") center center;
+    background: url("../img/caalga/caalga\ solucoes\ industriais\ -\ cilindro\ de\ pinças.png") center;
     background-size: cover;
     position: relative;
   }
